--- a/TorneoEjbApp/pom.xml
+++ b/TorneoEjbApp/pom.xml
@@ -32,4 +32,11 @@
       </plugin>
     </plugins>
   </build>
+  <dependencies>
+	  <dependency>
+	    <groupId>jakarta.persistence</groupId>
+	    <artifactId>jakarta.persistence-api</artifactId>
+	    <version>3.2.0</version>
+	</dependency>
+  </dependencies>
 </project>
