--- a/TorneoEjbApp/pom.xml
+++ b/TorneoEjbApp/pom.xml
@@ -34,9 +34,23 @@
   </build>
   <dependencies>
 	  <dependency>
-	    <groupId>jakarta.persistence</groupId>
-	    <artifactId>jakarta.persistence-api</artifactId>
-	    <version>3.2.0</version>
-	</dependency>
+    <groupId>jakarta.enterprise</groupId>
+    <artifactId>jakarta.enterprise.cdi-api</artifactId>
+    <version>3.0.0</version>
+    <scope>provided</scope>
+</dependency>
+<dependency>
+    <groupId>jakarta.inject</groupId>
+    <artifactId>jakarta.inject-api</artifactId>
+    <version>2.0.0</version>
+    <scope>provided</scope>
+</dependency>
+<dependency>
+    <groupId>jakarta.persistence</groupId>
+    <artifactId>jakarta.persistence-api</artifactId>
+    <version>3.0.0</version>
+    <scope>provided</scope>
+</dependency>
+
   </dependencies>
 </project>
