--- a/TorneoEjbApp/pom.xml
+++ b/TorneoEjbApp/pom.xml
@@ -51,6 +51,13 @@
     <version>3.0.0</version>
     <scope>provided</scope>
 </dependency>
+<dependency>
+    <groupId>jakarta.ejb</groupId>
+    <artifactId>jakarta.ejb-api</artifactId>
+    <version>4.0.0</version>
+    <scope>provided</scope>
+</dependency>
+
 
   </dependencies>
 </project>
