--- a/TorneoWeb/src/main/webapp/WEB-INF/web.xml
+++ b/TorneoWeb/src/main/webapp/WEB-INF/web.xml
@@ -32,6 +32,20 @@
 		<servlet-name>EquipoServlet</servlet-name>
 		<servlet-class>py.edu.ucsa.servlets.EquipoServlet</servlet-class>
 	</servlet>
+	<servlet>
+		<description>
+		</description>
+		<display-name>Login</display-name>
+		<servlet-name>Login</servlet-name>
+		<servlet-class>py.edu.ucsa.servlets.Login</servlet-class>
+	</servlet>
+	<servlet>
+		<description>
+		</description>
+		<display-name>CerrarSession</display-name>
+		<servlet-name>CerrarSession</servlet-name>
+		<servlet-class>py.edu.ucsa.servlets.CerrarSession</servlet-class>
+	</servlet>
 	<servlet-mapping>
 		<servlet-name>TorneoServlet</servlet-name>
 		<url-pattern>/TorneoServlet</url-pattern>
@@ -47,6 +61,14 @@
 	<servlet-mapping>
 		<servlet-name>EquipoServlet</servlet-name>
 		<url-pattern>/EquipoServlet</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>Login</servlet-name>
+		<url-pattern>/Login</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>CerrarSession</servlet-name>
+		<url-pattern>/CerrarSession</url-pattern>
 	</servlet-mapping>
 	<welcome-file-list>
 		<welcome-file>index.html</welcome-file>
