--- a/TorneoEjbApp/pom.xml
+++ b/TorneoEjbApp/pom.xml
@@ -57,6 +57,11 @@
     <version>4.0.0</version>
     <scope>provided</scope>
 </dependency>
+<dependency>
+    <groupId>jakarta.jws</groupId>
+    <artifactId>jakarta.jws-api</artifactId>
+    <version>3.0.0</version>
+</dependency>
 
 
   </dependencies>
