--- a/examenAsoWebJPA/pom.xml
+++ b/examenAsoWebJPA/pom.xml
@@ -27,9 +27,40 @@
         <artifactId>maven-ejb-plugin</artifactId>
         <version>3.0.1</version>
         <configuration>
-          <ejbVersion>4.0</ejbVersion>
+          <ejbVersion>3.0</ejbVersion>
         </configuration>
       </plugin>
     </plugins>
   </build>
+  <dependencies>
+		  <dependency>
+    <groupId>jakarta.enterprise</groupId>
+    <artifactId>jakarta.enterprise.cdi-api</artifactId>
+    <version>3.0.0</version>
+    <scope>provided</scope>
+</dependency>
+<dependency>
+    <groupId>jakarta.inject</groupId>
+    <artifactId>jakarta.inject-api</artifactId>
+    <version>2.0.0</version>
+    <scope>provided</scope>
+</dependency>
+<dependency>
+    <groupId>jakarta.persistence</groupId>
+    <artifactId>jakarta.persistence-api</artifactId>
+    <version>3.0.0</version>
+    <scope>provided</scope>
+</dependency>
+<dependency>
+    <groupId>jakarta.ejb</groupId>
+    <artifactId>jakarta.ejb-api</artifactId>
+    <version>4.0.0</version>
+    <scope>provided</scope>
+</dependency>
+<dependency>
+    <groupId>jakarta.jws</groupId>
+    <artifactId>jakarta.jws-api</artifactId>
+    <version>3.0.0</version>
+</dependency>
+  </dependencies>
 </project>
