--- a/examenAsoWeb/pom.xml
+++ b/examenAsoWeb/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>py.edu.ucsa.web</groupId>
 	<artifactId>AsoWeb</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.0.1</version>
 	<packaging>war</packaging>
 	<name>AsoWeb</name>
 	<build>
