--- a/examenAsoWeb/src/main/webapp/WEB-INF/web.xml
+++ b/examenAsoWeb/src/main/webapp/WEB-INF/web.xml
@@ -5,12 +5,14 @@
 	xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">
 	<display-name>examenAsoWeb</display-name>
 	<welcome-file-list>
+	<!-- 
 		<welcome-file>index.html</welcome-file>
 		<welcome-file>index.htm</welcome-file>
 		<welcome-file>index.jsp</welcome-file>
 		<welcome-file>default.html</welcome-file>
 		<welcome-file>default.htm</welcome-file>
 		<welcome-file>default.jsp</welcome-file>
+		-->
 	</welcome-file-list>
 	<servlet>
 		<description></description>
@@ -25,4 +27,20 @@
 	<session-config>
 		<session-timeout>30</session-timeout>
 	</session-config>
+	<filter>
+		<filter-name>AuthFilter</filter-name>
+		<filter-class>py.edu.ucsa.web.filters.AuthFilter</filter-class>
+	</filter>
+	<filter-mapping>
+		<filter-name>AuthFilter</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
+	<servlet>
+		<servlet-name>ExposicionServlet</servlet-name>
+		<servlet-class>py.edu.ucsa.web.servlets.ExposicionServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>ExposicionServlet</servlet-name>
+		<url-pattern>/ExposicionServlet</url-pattern>
+	</servlet-mapping>
 </web-app>
