--- a/coope.dev/src/main/resources/application.yml
+++ b/coope.dev/src/main/resources/application.yml
@@ -10,7 +10,7 @@ spring:
   coopedev:
    url: jdbc:postgresql://localhost:5432/coopedev
    username: postgres
-   password: admin123*
+   password: admin123
    driver-class-name: org.postgresql.Driver
  jpa:
   coopedev:
