--- a/coope.dev/src/main/resources/application.yml
+++ b/coope.dev/src/main/resources/application.yml
@@ -8,8 +8,8 @@ server:
 spring:
  datasource:
   coopedev:
-   url: jdbc:postgresql://localhost:5432/coopedev
-   username: francis
+   url: jdbc:postgresql://192.168.100.66:5432/coopedev
+   username: postgres
    password: admin123
    driver-class-name: org.postgresql.Driver
  jpa:
